<resources>
    <string name="app_name">헤어나와</string>
    <string name="bottomNavi1">홈</string>
    <string name="bottomNavi2">샵현황</string>
    <string name="bottomNavi3">예약현황</string>
    <string name="bottomNavi4">피드백&amp;리뷰</string>
    <string name="bottomNavi5">고객관리</string>
    <string name="bottomNavi1_customer">홈</string>
    <string name="bottomNavi2_customer">샵위치찾기</string>
    <string name="bottomNavi3_customer">스타일찾기</string>
    <string name="bottomNavi4_customer">나의뷰티샵</string>
    <string name="bottomNavi5_customer">예약현황</string>
    <string name="Dailys">일간 현황</string>
    <string name="Weeklys">주간 현황</string>
    <string name="Monthlys">월간 현황</string>
    <string name="Annuals">연간 현황</string>
</resources>
