<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomNavi1"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottomNavi1"/>

    <item
        android:id="@+id/bottomNavi2"
        android:enabled="true"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/bottomNavi2"/>

    <item
        android:id="@+id/bottomNavi3"
        android:enabled="true"
        android:icon="@drawable/ic_event_available_black_24dp"
        android:title="@string/bottomNavi3"/>

    <item
        android:id="@+id/bottomNavi4"
        android:enabled="true"
        android:icon="@drawable/ic_thumbs_up_down_black_24dp"
        android:title="@string/bottomNavi4"/>

    <item
        android:id="@+id/bottomNavi5"
        android:enabled="true"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/bottomNavi5"/>
</menu>